Fixed title bug on Safari and updated correct routes

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -12,6 +12,7 @@ header {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
+  align-items: center;
   margin-bottom: 2em;
 }
 
